# UniDream

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  audit_ac_support.py  audit_bc_prior.py  audit_policy_collapse.py  audit_teacher_regimes.py  audit_wm_regime.py  build_aux_source_cache.py  build_binance_public_spot_series.py  build_binance_source_cache.py  build_coinmetrics_source_cache.py  build_glassnode_source_cache.py  build_source_cache_from_manifest.py  check_config_source_requirements.py  generate_next_source_manifest.py  generate_source_manifest_stub.py  inspect_free_manual_inputs.py  inspect_source_cache.py  pyproject.toml  recommend_next_source_step.py  recommend_source_fetch_commands.py  report_source_stage_status.py  requirements.txt  select_best_source_family.py  source_rollout_plan.py  summarize_probe_suite.py  summarize_source_requirements.py  train.py  train_event_controller.py  train_ppo.py  train_qdt.py  train_risk_controller.py  validate_source_manifest.py  validate_source_rollout_suite.py  write_optimization_status.py  write_source_rollout_report.py  (+2 more)
checkpoints/: .gitignore
configs/: acplan17_det_retrain_s007_tmp.yaml  acplan17_fire_selector_v2_tmp.yaml  acplan17_route_rebalance_mild_s007_tmp.yaml  acplan17_route_rebalance_s007_tmp.yaml  bc_multitask_aux_nopred_fairwm_s007.yaml  bc_multitask_aux_nopred_s007.yaml  bc_multitask_aux_predstate_all_adapter_s007.yaml  bc_multitask_aux_predstate_all_scale025_adapter_s007.yaml  bc_multitask_aux_predstate_all_scale025_s007.yaml  bc_multitask_aux_predstate_all_scale0_adapter_s007.yaml  (+421 more)
(+414 files in other folders)
