[project]
name = "unidream"
version = "0.1.0"
description = "Imagination-based reinforcement learning for crypto trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pandas",
    "pandas-ta",
    "scikit-learn",
    "hmmlearn",
    "requests",
    "scipy",
    "pyyaml",
]

[project.scripts]
unidream-train = "unidream.cli.train:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["unidream*"]
